# data-engineering-zoomcamp

./: .gitignore  Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  notebook.py  notebook_01.ipynb  pyproject.toml
pipeline/: pipeline.py
