[project]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=25.0.0",
    "sqlalchemy>=2.0.51",
    "tdqm>=0.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.5.0",
]
